# raccoin

./: .gitignore  CNAME  Cargo.toml  Gemfile  README-nix.md  README.md  _config.yml  build.rs  default.nix  default.nix_2  fetch-nix-files.sh  flake-compat.nix  flake.nix  flake.nix_  flake4default.nix  getting-started.md  index.md  nixpkg-update.sh  package-np.nix  package.nix  reference.md  shell.nix  shell.nix_  test-flakes.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  rust.yml
_includes/: header.html
_layouts/: home.html
_posts/: 2023-10-26-raccoin-0-1.md
assets/: main.scss
cryptotax_ui/: Cargo.toml  build.rs
cryptotax_ui/ui/: appwindow.slint  capital-gains.slint  common.slint  global.slint  portfolio.slint  reports.slint  sources.slint  structs.slint  test-data.slint  transactions.slint  wallets.slint
demo/: bitcoin_core_transactions.csv  bitcoin_de_btc_account_statement.csv  bitstamp_TransactionsAll.csv  portfolio.json
docs/: getting-started.md  index.md  reference.md  snapshot.md
docs/_includes/: head.html  header.html
docs/_posts/: 2024-01-04-raccoin-0-2.md
docs/assets/: main.scss
raccoin_ui/: Cargo.toml
raccoin_ui/ui/: appwindow.slint  capital-gains.slint  common.slint  global.slint  portfolio.slint  reports.slint  structs.slint  test-data.slint  transactions.slint  wallets.slint
src/: alby.rs  alby_hub.rs  base.rs  binance.rs  bison.rs  bitcoin_core.rs  bitcoin_de.rs  bitonic.rs  bitstamp.rs  bittrex.rs  blink.rs  coinmarketcap.rs  coinpanda.rs  ctc.rs  electrum.rs  esplora.rs  etherscan.rs  fifo.rs  ftx.rs  horizon.rs  kraken.rs  liquid.rs  main.rs  mycelium.rs  phoenix.rs  poloniex.rs  price_history.rs  time.rs  trezor.rs  wallet_of_satoshi.rs  wave_space.rs
src/data/: btc-price-history-eur.csv
tests/data/: bitcoin_core_transactions.csv  bitcoin_de_english.csv  bitcoin_de_german.csv  bitcoin_de_original.csv  kraken_ledger.csv  kraken_trades.csv
ui/: appwindow.slint
