[package]
name = "raccoin"
version = "0.1.0"
description = "Crypto Tax Tool"
homepage = "https://raccoin.org/"
repository = "https://github.com/bjorn/raccoin"
license = "GPL-3.0-or-later"
authors = ["Thorbjørn Lindeijer <bjorn@lindeijer.nl>"]
edition = "2021"
build = "build.rs"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitcoin = "0.30.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8"
csv = "1.2"
directories = "5.0.1"
esplora-client = { version = "0.6", default-features = false, features = ["async"] }
ethers-core = "2.0.10"
ethers-etherscan = "2.0.10"
futures = "0.3.28"
open = "5.0.0"
pathdiff = "0.2.1"
raccoin_ui = { version = "0.1", path = "raccoin_ui" }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
rfd = { version = "0.12", default-features = false, features = [ "xdg-portal" ] }
rust_decimal = { version = "1.33", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.33"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
slice-group-by = "0.3.1"
slint = { version = "1.3.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-femtovg", "renderer-software"]}
stellar-base = { version = "0.6", default-features = false }
stellar-horizon = "0.7"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_family = "windows")'.build-dependencies]
windows_exe_info = "0.4.0"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
identifier = "org.raccoin.Raccoin"
product-name = "Raccoin"
description = "Crypto Portfolio and Tax Reporting Tool"
icons = ["raccoin_ui/ui/icons/app-icon-64.png"]
homepage = "https://raccoin.org/"
license_file = "LICENSE"
