[package]
name = "raccoin_ui"
version = "0.1.0"
description = "The UI for Raccoin"
homepage = "https://raccoin.org/"
repository = "https://github.com/bjorn/raccoin"
license = "GPL-3.0-or-later"
authors = ["Thorbjørn Lindeijer <bjorn@lindeijer.nl>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.2.2", git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = { version = "1.2.2", git = "https://github.com/slint-ui/slint" }
